# ConstGA

./: .gitignore  CMakeLists.txt  README.md
cli/: CMakeLists.txt  main.cpp
constga/: CMakeLists.txt
constga/include/constga/: CompileTimeLoop.h  Concrete.h  GA.h  Helpers.h  Products.h
constga/src/: empty.cpp
tests/: CMakeLists.txt  core.cpp  ga.cpp  pga3d.cpp  qcga.cpp
